[package]
name = "parser4curls"
version = "0.1.1"
edition = "2018"
authors = ["leo<kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/parser4curls"
description = "a parser for the cURL commands string that copied from the developer tools in the browser, or a string that is compatible with pattern `curl <url> [options...]`."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "6"
serde_json = "1"
anyhow = "1"